--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2722,6 +2722,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "soundscape.html#index-C_002d_0027-s"><code>C-'
+      s</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_0027-SPC"><code>C-'
       SPC</code></a>:</td>
       <td>&nbsp;</td>
@@ -3009,6 +3018,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "soundscape.html#index-C_002d_002e-s"><code>C-.
+      s</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_002e-SPC"><code>C-.
       SPC</code></a>:</td>
       <td>&nbsp;</td>
@@ -3058,6 +3076,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwebsearch.html#index-C_002d_003b-_002f"><code>C-;
+      /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwebsearch.html">emacspeak-websearch</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6424,6 +6451,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwebsearch.html#index-C_002dx-_0040-h-_002f"><code>
+      C-x @ h /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwebsearch.html">emacspeak-websearch</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-_003a"><code>
       C-x @ h :</code></a>:</td>
       <td>&nbsp;</td>
@@ -6632,6 +6668,15 @@
       <td valign="top"><a href=
       "soundscape.html#index-C_002dx-_0040-s-r"><code>C-x @ s
       r</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "soundscape.html#index-C_002dx-_0040-s-s"><code>C-x @ s
+      s</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "soundscape.html">soundscape</a></td>
