--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -527,8 +527,10 @@ are available are cued by an auditory icon on the header line.
       <span id="index-emacspeak_002deww_002dnext_002ddd-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next dd.
-Optional interactive prefix arg speaks the dd.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the dd.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The dd is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -543,8 +545,10 @@ The dd is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002ddl-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next dl.
-Optional interactive prefix arg speaks the dl.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the dl.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The dl is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -559,8 +563,10 @@ The dl is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002ddt-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next dt.
-Optional interactive prefix arg speaks the dt.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the dt.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The dt is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -632,8 +638,10 @@ Prompts if content at point is enclosed by multiple elements.
       <span id="index-emacspeak_002deww_002dnext_002dh-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h.
-Optional interactive prefix arg speaks the h.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -648,8 +656,10 @@ The h is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh1-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h1.
-Optional interactive prefix arg speaks the h1.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h1.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h1 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -664,8 +674,10 @@ The h1 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh2-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h2.
-Optional interactive prefix arg speaks the h2.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h2.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h2 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -680,8 +692,10 @@ The h2 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh3-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h3.
-Optional interactive prefix arg speaks the h3.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h3.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h3 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -696,8 +710,10 @@ The h3 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh4-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h4.
-Optional interactive prefix arg speaks the h4.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h4.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h4 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -712,8 +728,10 @@ The h4 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh5-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h5.
-Optional interactive prefix arg speaks the h5.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h5.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h5 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -728,8 +746,10 @@ The h5 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dh6-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next h6.
-Optional interactive prefix arg speaks the h6.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the h6.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The h6 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -744,8 +764,10 @@ The h6 is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dli-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next li.
-Optional interactive prefix arg speaks the li.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the li.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The li is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -760,8 +782,10 @@ The li is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dol-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next ol.
-Optional interactive prefix arg speaks the ol.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the ol.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The ol is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -776,8 +800,10 @@ The ol is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dp-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next p.
-Optional interactive prefix arg speaks the p.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the p.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The p is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -794,8 +820,10 @@ The p is automatically spoken if there is no user activity.
       "index-emacspeak_002deww_002dnext_002dtable-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next table.
-Optional interactive prefix arg speaks the table.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the table.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The table is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -810,8 +838,10 @@ The table is automatically spoken if there is no user activity.
       <span id="index-emacspeak_002deww_002dnext_002dul-1"></span>
       <div class="format">
         <pre class="format">Move forward to the next ul.
-Optional interactive prefix arg speaks the ul.
-See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Optional interactive prefix arg speaks the ul.  Second
+interactive prefix toggles this flag.  See user option
+‘emacspeak-eww-autospeak’ on how to reverse this behavior.
+Second interactive prefix arg toggles default value of this flag.
 The ul is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -877,6 +907,8 @@ Optional interactive prefix arg ‘playlist-p’ says to treat the
       <div class="format">
         <pre class="format">Move backward to the next dd.
 Optional interactive prefix arg speaks the dd.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dd is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -894,6 +926,8 @@ The dd is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next dl.
 Optional interactive prefix arg speaks the dl.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dl is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -911,6 +945,8 @@ The dl is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next dt.
 Optional interactive prefix arg speaks the dt.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dt is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -988,6 +1024,8 @@ Prompts if content at point is enclosed by multiple elements.
       <div class="format">
         <pre class="format">Move backward to the next h.
 Optional interactive prefix arg speaks the h.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1005,6 +1043,8 @@ The h is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h1.
 Optional interactive prefix arg speaks the h1.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h1 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1022,6 +1062,8 @@ The h1 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h2.
 Optional interactive prefix arg speaks the h2.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h2 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1039,6 +1081,8 @@ The h2 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h3.
 Optional interactive prefix arg speaks the h3.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h3 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1056,6 +1100,8 @@ The h3 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h4.
 Optional interactive prefix arg speaks the h4.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h4 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1073,6 +1119,8 @@ The h4 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h5.
 Optional interactive prefix arg speaks the h5.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h5 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1090,6 +1138,8 @@ The h5 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next h6.
 Optional interactive prefix arg speaks the h6.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h6 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1107,6 +1157,8 @@ The h6 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next li.
 Optional interactive prefix arg speaks the li.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The li is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1124,6 +1176,8 @@ The li is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next ol.
 Optional interactive prefix arg speaks the ol.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ol is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1141,6 +1195,8 @@ The ol is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next p.
 Optional interactive prefix arg speaks the p.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The p is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1158,6 +1214,8 @@ The p is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next table.
 Optional interactive prefix arg speaks the table.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The table is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1175,6 +1233,8 @@ The table is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move backward to the next ul.
 Optional interactive prefix arg speaks the ul.
+Second interactive prefix toggles this flag.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ul is automatically spoken if there is no user activity.
 </pre>
       </div>
