--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -403,6 +403,7 @@ The heads for the associated hydra are:
 "y":    ‘(funcall-interactively #’yank-pop 1)’,
 "Y":    ‘(funcall-interactively #’yank-pop -1)’,
 "i":    ‘emacspeak-muggles-ido-yank’,
+"s":    ‘emacspeak-muggles-ido-yank’,
 "l":    ‘browse-kill-ring’
 
 The body can be accessed via ‘emacspeak-muggles-yank-pop/body’.
