--- a/manual/emacspeak_002dwebsearch.html
+++ b/manual/emacspeak_002dwebsearch.html
@@ -284,9 +284,13 @@ prefix arg is equivalent to hitting the I’m Feeling Lucky button on Google.
     <strong>emacspeak-websearch-google-with-toolbelt</strong>
     <em>(query)</em></dt>
     <dd>
-      <span id=
-      "index-emacspeak_002dwebsearch_002dgoogle_002dwith_002dtoolbelt-1">
-      </span>
+      <dl compact="compact">
+        <dt><kbd>C-; /</kbd></dt>
+        <dd><span id="index-C_002d_003b-_002f"></span></dd>
+        <dt><kbd>C-x @ h /</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-_002f"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dwebsearch_002dgoogle_002dwith_002dtoolbelt-1"></span>
       <div class="format">
         <pre class="format">Launch Google search with toolbelt.
 
