--- a/manual/soundscape.html
+++ b/manual/soundscape.html
@@ -89,7 +89,14 @@
     <dt id="index-soundscape">Command: <strong>soundscape</strong>
     <em>(scape)</em></dt>
     <dd>
-      <span id="index-soundscape-1"></span>
+      <dl compact="compact">
+        <dt><kbd>C-. s</kbd></dt>
+        <dd><span id="index-C_002d_002e-s"></span></dd>
+        <dt><kbd>C-' s</kbd></dt>
+        <dd><span id="index-C_002d_0027-s"></span></dd>
+        <dt><kbd>C-x @ s s</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-s-s"></span></dd>
+      </dl><span id="index-soundscape-1"></span>
       <div class="format">
         <pre class="format">Play soundscape.
 
@@ -281,7 +288,7 @@ Optional interactive prefix arg ‘prompt-mode’ prompts for the mode.
     Option</strong> <em>soundscape-manager-options</em></dt>
     <dd>
       <p>User customizable options list passed to boodler. Defaults
-      specify alsa as the output and set master volume to 0.5</p>
+      specify alsa as the output and set master volume</p>
     </dd>
   </dl>
   <hr />
