--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -204,9 +204,24 @@ unless ‘dired-listing-switches’ contains -l
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002ddired_002dplay_002dduration"></span>
+  <h4 class="subsubsection">12.48.1.10
+  emacspeak-dired-play-duration</h4>
+  <dl>
+    <dt id="index-emacspeak_002ddired_002dplay_002dduration">
+    Command: <strong>emacspeak-dired-play-duration</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002ddired_002dplay_002dduration-1"></span>
+      <div class="format">
+        <pre class=
+        "format">speak duration of mp3 files on current line or in current directory.
+</pre>
+      </div>
+    </dd>
   </dl><span id=
   "emacspeak_002ddired_002drpm_002dquery_002din_002ddired"></span>
-  <h4 class="subsubsection">12.48.1.10
+  <h4 class="subsubsection">12.48.1.11
   emacspeak-dired-rpm-query-in-dired</h4>
   <dl>
     <dt id=
@@ -224,7 +239,7 @@ unless ‘dired-listing-switches’ contains -l
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dshow_002dfile_002dtype"></span>
-  <h4 class="subsubsection">12.48.1.11
+  <h4 class="subsubsection">12.48.1.12
   emacspeak-dired-show-file-type</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dshow_002dfile_002dtype">
@@ -245,7 +260,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime"></span>
-  <h4 class="subsubsection">12.48.1.12
+  <h4 class="subsubsection">12.48.1.13
   emacspeak-dired-speak-file-access-time</h4>
   <dl>
     <dt id=
@@ -263,7 +278,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime"></span>
-  <h4 class="subsubsection">12.48.1.13
+  <h4 class="subsubsection">12.48.1.14
   emacspeak-dired-speak-file-modification-time</h4>
   <dl>
     <dt id=
@@ -282,7 +297,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dpermissions"></span>
-  <h4 class="subsubsection">12.48.1.14
+  <h4 class="subsubsection">12.48.1.15
   emacspeak-dired-speak-file-permissions</h4>
   <dl>
     <dt id=
@@ -301,7 +316,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dsize"></span>
-  <h4 class="subsubsection">12.48.1.15
+  <h4 class="subsubsection">12.48.1.16
   emacspeak-dired-speak-file-size</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dspeak_002dfile_002dsize">
@@ -317,7 +332,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.48.1.16
+  <h4 class="subsubsection">12.48.1.17
   emacspeak-dired-speak-header-line</h4>
   <dl>
     <dt id=
@@ -335,7 +350,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dsymlink_002dtarget"></span>
-  <h4 class="subsubsection">12.48.1.17
+  <h4 class="subsubsection">12.48.1.18
   emacspeak-dired-speak-symlink-target</h4>
   <dl>
     <dt id=
@@ -354,7 +369,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"></span>
-  <h4 class="subsubsection">12.48.1.18
+  <h4 class="subsubsection">12.48.1.19
   emacspeak-locate-play-results-as-playlist</h4>
   <dl>
     <dt id=
