--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on April 11,
+  Desktop</strong> and was last updated on April 13,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -2088,12 +2088,19 @@
                   "toc-emacspeak_002ddired_002dpdf_002dopen">12.48.1.9
                   emacspeak-dired-pdf-open</a></li>
                   <li><a id=
+                  "toc-emacspeak_002ddired_002dplay_002dduration"
+                  href=
+                  "emacspeak_002ddired.html#emacspeak_002ddired_002dplay_002dduration"
+                  name=
+                  "toc-emacspeak_002ddired_002dplay_002dduration">12.48.1.10
+                  emacspeak-dired-play-duration</a></li>
+                  <li><a id=
                   "toc-emacspeak_002ddired_002drpm_002dquery_002din_002ddired"
                   href=
                   "emacspeak_002ddired.html#emacspeak_002ddired_002drpm_002dquery_002din_002ddired"
                   name=
                   "toc-emacspeak_002ddired_002drpm_002dquery_002din_002ddired">
-                  12.48.1.10
+                  12.48.1.11
                   emacspeak-dired-rpm-query-in-dired</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dshow_002dfile_002dtype"
@@ -2101,7 +2108,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dshow_002dfile_002dtype"
                   name=
                   "toc-emacspeak_002ddired_002dshow_002dfile_002dtype">
-                  12.48.1.11
+                  12.48.1.12
                   emacspeak-dired-show-file-type</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime"
@@ -2109,7 +2116,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime">
-                  12.48.1.12
+                  12.48.1.13
                   emacspeak-dired-speak-file-access-time</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime"
@@ -2117,7 +2124,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime">
-                  12.48.1.13
+                  12.48.1.14
                   emacspeak-dired-speak-file-modification-time</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dpermissions"
@@ -2125,7 +2132,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dfile_002dpermissions"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dpermissions">
-                  12.48.1.14
+                  12.48.1.15
                   emacspeak-dired-speak-file-permissions</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dsize"
@@ -2133,7 +2140,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dfile_002dsize"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dfile_002dsize">
-                  12.48.1.15
+                  12.48.1.16
                   emacspeak-dired-speak-file-size</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dheader_002dline"
@@ -2141,7 +2148,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dheader_002dline"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dheader_002dline">
-                  12.48.1.16
+                  12.48.1.17
                   emacspeak-dired-speak-header-line</a></li>
                   <li><a id=
                   "toc-emacspeak_002ddired_002dspeak_002dsymlink_002dtarget"
@@ -2149,7 +2156,7 @@
                   "emacspeak_002ddired.html#emacspeak_002ddired_002dspeak_002dsymlink_002dtarget"
                   name=
                   "toc-emacspeak_002ddired_002dspeak_002dsymlink_002dtarget">
-                  12.48.1.17
+                  12.48.1.18
                   emacspeak-dired-speak-symlink-target</a></li>
                   <li><a id=
                   "toc-emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"
@@ -2157,7 +2164,7 @@
                   "emacspeak_002ddired.html#emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"
                   name=
                   "toc-emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist">
-                  12.48.1.18
+                  12.48.1.19
                   emacspeak-locate-play-results-as-playlist</a></li>
                 </ul>
               </li>
