--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -214,8 +214,10 @@ unless ‘dired-listing-switches’ contains -l
       <span id=
       "index-emacspeak_002ddired_002dplay_002dduration-1"></span>
       <div class="format">
-        <pre class=
-        "format">speak duration of mp3 files on current line or in current directory.
+        <pre class="format">Speak duration of MP3 files.
+If on a file, speak its duration.
+If on a directory, speak the total duration of all mp3 files under
+  that directory.
 </pre>
       </div>
     </dd>
