--- a/announcements/ANNOUNCE-54.html
+++ b/announcements/ANNOUNCE-54.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-04-30 Fri 19:33 -->
+<!-- 2021-05-01 Sat 07:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Announcing Emacspeak 54.0—EZDog!</title>
@@ -223,16 +223,16 @@
 The enjoyment of one's tools is an essential ingredient of successful work. &#x2013; Donald E. Knuth
 </p>
 
-<div id="outline-container-org4c58635" class="outline-2">
-<h2 id="org4c58635"><span class="section-number-2">1</span> For Immediate Release:</h2>
+<div id="outline-container-org451c310" class="outline-2">
+<h2 id="org451c310"><span class="section-number-2">1</span> For Immediate Release:</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 San Jose, CA, (May 3, 2021)
 </p>
 </div>
 
-<div id="outline-container-org64016b1" class="outline-3">
-<h3 id="org64016b1"><span class="section-number-3">1.1</span> Emacspeak 54.0 (EZDog)  Unleashed!  🦮</h3>
+<div id="outline-container-org48f3ad7" class="outline-3">
+<h3 id="org48f3ad7"><span class="section-number-3">1.1</span> Emacspeak 54.0 (EZDog)  Unleashed!  🦮</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 &#x2014; Making Accessible Computing EZ Again!
@@ -254,8 +254,8 @@ working efficiently and effectively from anywhere!
 </div>
 </div>
 
-<div id="outline-container-org8e7e2f6" class="outline-2">
-<h2 id="org8e7e2f6"><span class="section-number-2">2</span> Investors Note:</h2>
+<div id="outline-container-org6843857" class="outline-2">
+<h2 id="org6843857"><span class="section-number-2">2</span> Investors Note:</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 With several prominent tweeters expanding coverage of <span class="underline">#emacspeak</span>,
@@ -267,8 +267,8 @@ better known stocks in the tech sector.
 </div>
 </div>
 
-<div id="outline-container-org837f5ed" class="outline-2">
-<h2 id="org837f5ed"><span class="section-number-2">3</span> What Is It?</h2>
+<div id="outline-container-orgf9e3a61" class="outline-2">
+<h2 id="orgf9e3a61"><span class="section-number-2">3</span> What Is It?</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Emacspeak is a fully functional audio desktop that provides complete
@@ -284,8 +284,8 @@ access to the evolving assistant-oriented social Internet cloud.
 </div>
 </div>
 
-<div id="outline-container-org720ba6a" class="outline-2">
-<h2 id="org720ba6a"><span class="section-number-2">4</span> Major Enhancements:</h2>
+<div id="outline-container-org3c33995" class="outline-2">
+<h2 id="org3c33995"><span class="section-number-2">4</span> Major Enhancements:</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>Faster Startup  🛱</li>
@@ -295,8 +295,9 @@ access to the evolving assistant-oriented social Internet cloud.
 <li>Updated Soundscapes  🕬</li>
 <li>Updated wizards🧙</li>
 <li>Updated URL templates  🕷</li>
+<li>Capitalization And AllCaps   💼</li>
 <li><p>
-Capitalization And AllCaps   💼
+Updated keymaps and keybindings ⌨
 </p>
 
 <p>
@@ -311,8 +312,8 @@ Note: This version <b>requires</b> emacs-27.1 or later.
 </div>
 </div>
 
-<div id="outline-container-orgb6f1898" class="outline-2">
-<h2 id="orgb6f1898"><span class="section-number-2">5</span> Establishing Liberty, Equality And Freedom:</h2>
+<div id="outline-container-org89b07c6" class="outline-2">
+<h2 id="org89b07c6"><span class="section-number-2">5</span> Establishing Liberty, Equality And Freedom:</h2>
 <div class="outline-text-2" id="text-5">
 <p>
   Never a toy system, Emacspeak is voluntarily bundled with all
@@ -356,8 +357,8 @@ press releases.
 </div>
 </div>
 
-<div id="outline-container-org9e50f31" class="outline-2">
-<h2 id="org9e50f31"><span class="section-number-2">6</span> Independent Test Results:</h2>
+<div id="outline-container-org3fd531f" class="outline-2">
+<h2 id="org3fd531f"><span class="section-number-2">6</span> Independent Test Results:</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Independent test results have proven that unlike some modern (and
@@ -371,8 +372,8 @@ computer&#x2013; that stops functioning when Emacspeak is uninstalled!”.
 </p>
 </div>
 
-<div id="outline-container-org9af1efd" class="outline-3">
-<h3 id="org9af1efd"><span class="section-number-3">6.1</span> Note from Aster,Bubbles and Tilden:</h3>
+<div id="outline-container-orgb78ef07" class="outline-3">
+<h3 id="orgb78ef07"><span class="section-number-3">6.1</span> Note from Aster,Bubbles and Tilden:</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 UnDoctored Videos Inc. is looking for volunteers to star in a
@@ -382,8 +383,8 @@ video demonstrating such complete user failure.
 </div>
 </div>
 
-<div id="outline-container-orgecdaf42" class="outline-2">
-<h2 id="orgecdaf42"><span class="section-number-2">7</span> Obtaining Emacspeak:</h2>
+<div id="outline-container-orgbf936d6" class="outline-2">
+<h2 id="orgbf936d6"><span class="section-number-2">7</span> Obtaining Emacspeak:</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Emacspeak can be downloaded from GitHub &#x2014; see
@@ -400,8 +401,8 @@ The latest development snapshot of Emacspeak is always available at
 </div>
 </div>
 
-<div id="outline-container-org52d6f1c" class="outline-2">
-<h2 id="org52d6f1c"><span class="section-number-2">8</span> History:</h2>
+<div id="outline-container-org603d1f5" class="outline-2">
+<h2 id="org603d1f5"><span class="section-number-2">8</span> History:</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>Emacspeak 54.0 (EZDog) learns to take it easy from Tilden</li>
@@ -552,8 +553,8 @@ to provide the first fully interactive speech-enabled WebTop.</li>
 </div>
 </div>
 
-<div id="outline-container-org5ed84c2" class="outline-2">
-<h2 id="org5ed84c2"><span class="section-number-2">9</span> About Emacspeak:</h2>
+<div id="outline-container-org49c7429" class="outline-2">
+<h2 id="org49c7429"><span class="section-number-2">9</span> About Emacspeak:</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Originally based at Cornell (NY) —
@@ -579,8 +580,8 @@ from within Gnus.
 </div>
 </div>
 
-<div id="outline-container-orgfd3b4a7" class="outline-2">
-<h2 id="orgfd3b4a7"><span class="section-number-2">10</span> Press/Analyst Contact: Tilden Labrador</h2>
+<div id="outline-container-org64d2e91" class="outline-2">
+<h2 id="org64d2e91"><span class="section-number-2">10</span> Press/Analyst Contact: Tilden Labrador</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Going forward, Tilden acknowledges his exclusive monopoly on
@@ -612,7 +613,7 @@ their respective owners.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2021-04-30 Fri 19:33</p>
+<p class="date">Created: 2021-05-01 Sat 07:25</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
