--- a/announcements/ANNOUNCE-54.html
+++ b/announcements/ANNOUNCE-54.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-05-01 Sat 20:27 -->
+<!-- 2021-05-01 Sat 20:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Announcing Emacspeak 54.0—EZDog!</title>
@@ -223,16 +223,16 @@
 The enjoyment of one's tools is an essential ingredient of successful work. &#x2013; Donald E. Knuth
 </p>
 
-<div id="outline-container-org182001b" class="outline-2">
-<h2 id="org182001b"><span class="section-number-2">1</span> For Immediate Release:</h2>
+<div id="outline-container-org3888897" class="outline-2">
+<h2 id="org3888897"><span class="section-number-2">1</span> For Immediate Release:</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 San Jose, CA, (May 3, 2021)
 </p>
 </div>
 
-<div id="outline-container-org5126c6d" class="outline-3">
-<h3 id="org5126c6d"><span class="section-number-3">1.1</span> Emacspeak 54.0 (EZDog)  Unleashed!  🦮</h3>
+<div id="outline-container-orga80b37f" class="outline-3">
+<h3 id="orga80b37f"><span class="section-number-3">1.1</span> Emacspeak 54.0 (EZDog)  Unleashed!  🦮</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 &#x2014; Making Accessible Computing EZ Again!
@@ -254,8 +254,8 @@ working efficiently and effectively from anywhere!
 </div>
 </div>
 
-<div id="outline-container-orgebf0d65" class="outline-2">
-<h2 id="orgebf0d65"><span class="section-number-2">2</span> Investors Note:</h2>
+<div id="outline-container-org04cd7a8" class="outline-2">
+<h2 id="org04cd7a8"><span class="section-number-2">2</span> Investors Note:</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 With several prominent tweeters expanding coverage of <span class="underline">#emacspeak</span>,
@@ -267,8 +267,8 @@ better known stocks in the tech sector.
 </div>
 </div>
 
-<div id="outline-container-org285c676" class="outline-2">
-<h2 id="org285c676"><span class="section-number-2">3</span> What Is It?</h2>
+<div id="outline-container-org3115cb5" class="outline-2">
+<h2 id="org3115cb5"><span class="section-number-2">3</span> What Is It?</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Emacspeak is a fully functional audio desktop that provides complete
@@ -284,8 +284,8 @@ access to the evolving assistant-oriented social Internet cloud.
 </div>
 </div>
 
-<div id="outline-container-org24b73f7" class="outline-2">
-<h2 id="org24b73f7"><span class="section-number-2">4</span> Major Enhancements:</h2>
+<div id="outline-container-orged75ec3" class="outline-2">
+<h2 id="orged75ec3"><span class="section-number-2">4</span> Major Enhancements:</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>Faster Startup  🛱</li>
@@ -313,8 +313,8 @@ Note: This version <b>requires</b> emacs-27.1 or later.
 </div>
 </div>
 
-<div id="outline-container-org4ee4c85" class="outline-2">
-<h2 id="org4ee4c85"><span class="section-number-2">5</span> Establishing Liberty, Equality And Freedom:</h2>
+<div id="outline-container-orgd0c7f10" class="outline-2">
+<h2 id="orgd0c7f10"><span class="section-number-2">5</span> Establishing Liberty, Equality And Freedom:</h2>
 <div class="outline-text-2" id="text-5">
 <p>
   Never a toy system, Emacspeak is voluntarily bundled with all
@@ -358,8 +358,8 @@ press releases.
 </div>
 </div>
 
-<div id="outline-container-orga04a2c6" class="outline-2">
-<h2 id="orga04a2c6"><span class="section-number-2">6</span> Independent Test Results:</h2>
+<div id="outline-container-org21dc866" class="outline-2">
+<h2 id="org21dc866"><span class="section-number-2">6</span> Independent Test Results:</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Independent test results have proven that unlike some modern (and
@@ -373,8 +373,8 @@ computer&#x2013; that stops functioning when Emacspeak is uninstalled!”.
 </p>
 </div>
 
-<div id="outline-container-orgd1895d1" class="outline-3">
-<h3 id="orgd1895d1"><span class="section-number-3">6.1</span> Note from Aster,Bubbles and Tilden:</h3>
+<div id="outline-container-org40be5bf" class="outline-3">
+<h3 id="org40be5bf"><span class="section-number-3">6.1</span> Note from Aster,Bubbles and Tilden:</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 UnDoctored Videos Inc. is looking for volunteers to star in a
@@ -384,8 +384,8 @@ video demonstrating such complete user failure.
 </div>
 </div>
 
-<div id="outline-container-org3678dbd" class="outline-2">
-<h2 id="org3678dbd"><span class="section-number-2">7</span> Obtaining Emacspeak:</h2>
+<div id="outline-container-org945eccf" class="outline-2">
+<h2 id="org945eccf"><span class="section-number-2">7</span> Obtaining Emacspeak:</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Emacspeak can be downloaded from GitHub &#x2014; see
@@ -402,11 +402,11 @@ The latest development snapshot of Emacspeak is always available at
 </div>
 </div>
 
-<div id="outline-container-org9f3b13f" class="outline-2">
-<h2 id="org9f3b13f"><span class="section-number-2">8</span> History:</h2>
+<div id="outline-container-orgd258e48" class="outline-2">
+<h2 id="orgd258e48"><span class="section-number-2">8</span> History:</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
-<li>Emacspeak 54.0 (EZDog) learns to take it easy from Tilden</li>
+<li>Emacspeak 54.0 (EZDog) learns to take it easy from Tilden.</li>
 <li>Emacspeak 53.0 (EfficientDog)  focuses on  efficiency.</li>
 <li>Emacspeak 52.0 (WorkAtHomeDog) makes working remotely a pleasurable experience.</li>
 <li>Bigger and more powerful than any smart assistAnt, AssistDog provides</li>
@@ -554,8 +554,8 @@ to provide the first fully interactive speech-enabled WebTop.</li>
 </div>
 </div>
 
-<div id="outline-container-orgc752db3" class="outline-2">
-<h2 id="orgc752db3"><span class="section-number-2">9</span> About Emacspeak:</h2>
+<div id="outline-container-org9306ff5" class="outline-2">
+<h2 id="org9306ff5"><span class="section-number-2">9</span> About Emacspeak:</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Originally based at Cornell (NY) —
@@ -581,8 +581,8 @@ from within Gnus.
 </div>
 </div>
 
-<div id="outline-container-org6dd799b" class="outline-2">
-<h2 id="org6dd799b"><span class="section-number-2">10</span> Press/Analyst Contact: Tilden Labrador</h2>
+<div id="outline-container-org80bc5fa" class="outline-2">
+<h2 id="org80bc5fa"><span class="section-number-2">10</span> Press/Analyst Contact: Tilden Labrador</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Going forward, Tilden acknowledges his exclusive monopoly on
@@ -614,7 +614,7 @@ their respective owners.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2021-05-01 Sat 20:27</p>
+<p class="date">Created: 2021-05-01 Sat 20:31</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
